# Twelve-Knights-Vigil

./: ;  Cargo.toml  KNIGHTS  NOTES  TODO  TOWER_COUNT_AND_DESIGN
.github/workflows/: build-and-release.yml  rust.yml
assets/models/: barricade.glb  tile.glb  tile_barren.glb  tile_cornerSquare.glb  tile_empty.glb  tile_fire.glb  tile_frame.glb  tile_rock.glb  tile_straight.glb  tile_tree.glb  tile_water.glb  wave_portal.glb
assets/models/towers/: command_center.glb  tower_medium.glb  tower_short.glb  tower_tall.glb
assets/vn_scenes/backgrounds/: bg_list.json
assets/vn_scenes/characters/: character_data.json
assets/vn_scenes/test_scenes/: test_dialogue.dlog
blender/: barricade.blend  barricade.blend1  hands.blend  hands.blend1  wave_portal.blend  wave_portal.blend1
src/: cheats.rs  components.rs  coordinate.rs  debug.rs  enemy.rs  gamemode.rs  gamestate.rs  helpers.rs  main.rs  messages.rs  raycast.rs  tilemap.rs
src/debug/: fps.rs  mod.rs
src/input/: mod.rs
src/knights/: mod.rs
src/knights/minigames/: mod.rs  smoothie_mix.rs  tic_tac_toe.rs
src/main_menu/: mod.rs
src/messages/: mod.rs  reset.rs  system_alerts.rs
src/td_mode/: camera.rs  elements.rs  enemy.rs  gold.rs  life.rs  messages.rs  mod.rs  raycast.rs  sandbox.rs  tower_building.rs  ui.rs  waves.rs
src/td_mode/elements/: chemistry.rs  mod.rs
src/td_mode/enemy/: health.rs  mod.rs
src/td_mode/map/: map.rs  mod.rs  structures.rs  tile.rs
src/towers/: cooldown.rs  mod.rs  projectiles.rs  weapons.rs
src/vn_mode/: background.rs  mod.rs  parser.rs  scene.rs  speakers.rs
(+12 files in other folders)
