[package]
name = "twelve-knights-vigil"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["bevy-inspector-egui", "bevy_egui"]

[dependencies]
bevy = "0.7.0"
bevy-inspector-egui = {version = "0.11.0", optional = true}
bevy_egui = { version = "0.14.0", optional = true }
iyes_loopless = "0.5.1"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
