[package]
name = "twelve-knights-vigil"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["bevy-inspector-egui"]
bulletproof = []
screw_the_rules = []

[dependencies]
bevy = "0.7.0"
bevy-inspector-egui = {version = "0.11.0", optional = true}
bevy_egui = "0.14.0"
bevy_mod_raycast = "0.4.0"
iyes_loopless = "0.5.1"
nom = "7.1.1"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
