[package]
name = "twelve-knights-vigil"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = []
bulletproof = []
screw_the_rules = []

[dependencies]
bevy = "0.7.0"
bevy-inspector-egui = "0.11.0"
bevy_egui = "0.14.0"
bevy_mod_raycast = "0.4.0"
iyes_loopless = "0.5.1"
rand = "0.8.5"
serde_json = "1.0.81"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
